# server

./: .gitignore  .gitmodules  Cargo.toml  Rocket.toml
.github/workflows/: rust-nightly.yml  rust-stable.yml
images/rust-nightly/: Dockerfile
images/rust-stable/: Dockerfile
images/samba/: Dockerfile  start.sh
images/socks2http/: Dockerfile  socks2http.sh
k3s/: alloy-value.yaml  cilium-lb-pool.yaml  es.yaml  kibana-svc.yaml  lgtm-on-loki-value.yaml  loki-value.yaml  memos.yaml  minio-tenant-base.yaml  n8n.yaml  nextcloud-user.yaml  nextcloud.yaml  ollama.yaml  registry-ui.yaml  registry.yaml  surrealdb-ingress.yaml  surrealdb-values.yaml  tenant-base.yaml  test.yaml  vault-value.yaml  vault.yaml
k3s/ca/: password.txt  step-autocert-values.yaml  step-ca-ingress.yaml  step-ca-values.yaml  step-issuer.sh
k3s/deepsearcher/: config.yaml  deepsearcher.dockerfile  deepsearcher.yaml
k3s/dns/: dnsmasq.yaml  external-dns.yaml  stubby.Containerfile  stubby.yaml
k3s/gateway/: test.yaml  traefik-config.yaml
k3s/kvm-in-k3s/: _upload_dv.yaml  bridge-nad.yaml  cdi-uploadproxy.yaml  debian13-mix.yaml  debian13-private.yaml  debian13-public.yaml  debian13.yaml  multus-helm.yaml  test-pod.yaml  test-vm.yaml
k3s/minio/: minio-tenant-base.yaml
k3s/monitoring/: alloy-ingress.yaml  alloy.yaml  lgtm.yaml  loki.yaml  mimir.yaml  prometheus-operator.yaml  tempo.yaml
kvm/: Readme.md  bridge.tf  home-assistant.tf  openwrt.tf  terraform.tfstate  terraform.tfstate.backup
nix/: configuration.nix  home.nix
src/: lib.rs  main.rs  schema.rs
webpages/: Cargo.toml
(+34 files in other folders)
